--- a/12_wenteyao.html
+++ b/12_wenteyao.html
@@ -17,9 +17,7 @@
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
         <h1 class="">Taitita Wenteyao y la Religiosidad Mapuche</h1>
-        <a href="https://git.io/typing-svg"><img
-            src="https://readme-typing-svg.demolab.com?font=Fira+Code&pause=1000&color=F84CFA&center=true&vCenter=true&multiline=true&width=435&height=100&lines=Festival+de+Nuevos+Medios;Descentrando+Desigualdades+de+G%C3%A9nero"
-            alt="Typing SVG" /></a>
+        
         <p>
           <a href="index.html" class="btn btn-secondary my-2">TODA LA AUDIOGUÍA</a>
         </p>
@@ -34,13 +32,15 @@
     <div class="card mb-3">
       <div class="row g-0">
         <div class="col-md-4">
-          <img src="asset/img/rosaMariaLizama.jpg" class="img-fluid rounded-start" alt="...">
+          <img src="asset/img/12_Wenteyao.jpg" class="img-fluid rounded-start" alt="...">
         </div>
         <div class="col-md-8">
           <div class="card-body">
             <h5 class="card-title">Taitita Wenteyao y la Religiosidad mapuche</h5>
             <p class="card-text">
-            </p>
+              <iframe width="50%" height="auto" scrolling="no" frameborder="no" allow="autoplay"
+      src="https://w.soundcloud.com/player/?url=https://soundcloud.com/barbaragonzalezbarrera/ventanas-al-aire?si=883007e740b94e0d905498af3ec47ab8&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"></iframe> -->
+                </p>
             
             <div class="d-flex justify-content-center align-items-center">
               <!-- <a href="#" target="_blank"><img width="60" height="60"
