--- a/9_Trutruka.html
+++ b/9_Trutruka.html
@@ -29,7 +29,7 @@
     <div class="card mb-3">
       <div class="row g-0">
         <div class="col-md-4">
-          <img src="asset/img/9_cedulatrutruka" class="img-fluid rounded-start" alt="...">
+          <img src="asset/img/9_cedulatrutruka.jpg" class="img-fluid rounded-start" alt="...">
           <br>
           <div class="d-flex justify-content-center align-items-center">
             
