--- a/2_paleoindio.html
+++ b/2_paleoindio.html
@@ -19,7 +19,7 @@
         <h1 class="">VITRINA PALEOINDIO</h1>
         
         <p>
-          <a href="index.html" class="btn btn-secondary my-2">Todo Sitio23</a>
+          <a href="index.html" class="btn btn-secondary my-2">TODA LA AUDIOGUÍA</a>
         </p>
       </div>
     </div>
@@ -32,13 +32,13 @@
     <div class="card mb-3">
       <div class="row g-0">
         <div class="col-md-4">
-          <img src="asset/img/10_artefactosliticos.jpg" class="img-fluid rounded-start" alt="...">
+          <img src="asset/img/10_artefactoslíticos.jpg" class="img-fluid rounded-start" alt="...">
           <br>
           <h6 class="card-title">PALEOINDIO</h6>
           <div class="d-flex justify-content-center align-items-center">
             
           </div>
-          <h6 class="card-title">CAMILA CIJKA</h6>
+          <h6 class="card-title">PALEOINDIO</h6>
           <div class="d-flex justify-content-center align-items-center">
             <!-- <a href="https://valentinavillarroel.cl/" target="_blank"><img width="60" height="60"
                   src="https://img.icons8.com/dotty/80/web.png" alt="web" /></a> -->
@@ -50,7 +50,7 @@
         </div>
         <div class="col-md-8">
           <div class="card-body">
-            <h5 class="card-title">VALENTINA VILLARROEL + CAMILA CIJKA</h5>
+            <h5 class="card-title">PALEOINDIO</h5>
             <p class="card-text">
                          </p>
             <iframe width="100%" height="auto" scrolling="no" frameborder="no" allow="autoplay"
@@ -76,7 +76,7 @@
         <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
           <i class="bi bi-pc-display-horizontal icono"></i>
         </a>
-        <span class="mb-3 mb-md-0">Valparaiso, 2023</span>
+        <span class="mb-3 mb-md-0">Osorno, 2023</span>
       </div>
 
          </footer>
