--- a/3_fosiles.html
+++ b/3_fosiles.html
@@ -33,13 +33,12 @@
           <img src="asset/img/2_VitrinaPaleoindio.jpg" class="img-fluid rounded-start" alt="...">
           <br>
           <div class="d-flex justify-content-center align-items-center">
-                src="https://img.icons8.com/dotty/80/soundcloud.png" alt="soundcloud" /></a>
-
+              
           </div>
         </div>
         <div class="col-md-8">
           <div class="card-body">
-            <h5 class="card-title">TALLER RATA ELEKTRIKA</h5>
+            <h5 class="card-title">FÓSILES</h5>
             <p class="card-text">
               </p>
             <iframe width="100%" height="auto" scrolling="no" frameborder="no" allow="autoplay"
@@ -64,7 +63,7 @@
         <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
           <i class="bi bi-pc-display-horizontal icono"></i>
         </a>
-        <span class="mb-3 mb-md-0">Valparaiso, 2023</span>
+        <span class="mb-3 mb-md-0">Osorno, 2023</span>
       </div>
 
     </footer>
