--- a/1_ceramicatringlo.html
+++ b/1_ceramicatringlo.html
@@ -16,7 +16,7 @@
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="">AUDIOGUIA MHMO</h1>
+        <h1 class="">C</h1>
         <p>
           <a href="index.html" class="btn btn-secondary my-2">TODA LA AUDIOGUIA</a>
         </p>
