--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <div class="col product-item" category="piso1">
           <div class="card shadow-sm">
-            <a href="1_VitrinaAlfareria.html">
+            <a href="1_ceramicatringlo.html">
               <img src="asset/img/1_alfareria.jpg" class="card-img" alt="...">
             </a>
           </div>
