--- a/1_VitrinaPleistoceno.html
+++ b/1_VitrinaPleistoceno.html
@@ -52,6 +52,12 @@
           <div class="card-body">
             <h5 class="card-title">VITRINA PLEISTOCENO</h5>
             <p class="card-text">
+              Osorno prehistórico.<br> 
+Casi todo lo que sabemos sobre el pasado ancestral del planeta es a través del estudio de las rocas. Estos elementos guardan información sobre los seres que habitaron los ambientes del pasado que han sido conservados  bajo el proceso llamado fosilización, que en forma general se describe como la conservación de restos orgánicos debido a su depósito en lugares poco expuestos que detienen el proceso de descomposición por los bajos niveles de oxígeno y temperatura o la presencia de un conservante natural como alquitrán o resina. Los fósiles pueden corresponder a un cuerpo y sus partes, a las marcas en sedimentos endurecidos como pisadas, o a sustancias orgánicas degradadas a partir de moléculas de seres vivos.
+Los fósiles también evidencian las secuencias de  procesos biológicos y ambientales en contextos locales que se insertan dentro de grandes eventos planetarios. En la comuna de Osorno y la región de Los Lagos, los fósiles de restos de animales extintos y pisadas humanas son parte del relato sobre los grandes intercambios migratorios que involucran especies extintas que revelan una temprana presencia humana en la región.
+Las huellas humanas junto con los artefactos líticos presentes en los sitios locales son la evidencia de aquellos habitantes tempranos que se integraron a las culturas precolombinas de América antes de la llegada Europea en el año 1492. A través del trabajo arqueológico se puede distinguir una continuidad tecnológica entre los habitantes tempranos y las culturas precolombinas, particularmente en el desarrollo de los artefactos líticos que junto con la alfarería revelan formas particulares de ver la vida y el mundo.
+
+
                <iframe width="100%" height="auto" scrolling="no" frameborder="no" allow="autoplay"
               src="https://w.soundcloud.com/player/?url=https://soundcloud.com/orquestapandroginia/corsa-plus-2009?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"></iframe>
 
