--- a/2_paleoindio.html
+++ b/2_paleoindio.html
@@ -52,6 +52,8 @@
           <div class="card-body">
             <h5 class="card-title">PALEOINDIO</h5>
             <p class="card-text">
+              Poblamiento Americano<br>
+La era paleoindia de América del Sur hace referencia al primer poblamiento humano conocido de América. Se estableció hace unos 15 mil años antes del presente. Estuvo conformado por comunidades nómadas con vínculos culturales con Asia Oriental, Australasia, Melanesia y Polinesia. Esta población originaria usaba tecnologías líticas, el fuego controlado, explotaba la fauna marina y ocupaba refugios costeros.   
                          </p>
             <iframe width="100%" height="auto" scrolling="no" frameborder="no" allow="autoplay"
               src="https://w.soundcloud.com/player/?url=https://soundcloud.com/valentinavillarroel/crustaceos-adheridos-a-rocas?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"></iframe>
