--- a/index.html
+++ b/index.html
@@ -147,6 +147,13 @@
             </a>
           </div>
         </div>
+         <div class="col product-item" category="piso2">
+          <div class="card shadow-sm">
+            <a href="1_2_faunaPleistoceno.html">
+              <img src="asset/img/2_VitrinaPaleoindio.jpg" class="card-img" alt="...">
+            </a>
+          </div>
+        </div>
 
         <div class="col product-item" category="piso2">
           <div class="card shadow-sm">
