--- a/1_2_faunaPleistoceno.html
+++ b/1_2_faunaPleistoceno.html
@@ -32,7 +32,7 @@
     <div class="card mb-3">
       <div class="row g-0">
         <div class="col-md-4">
-          <img src="asset/img/1_VitrinaPleistoceno.jpg" class="img-fluid rounded-start" alt="...">
+          <img src="asset/img/2_gonfoterios.jpg" class="img-fluid rounded-start" alt="...">
           <br>
           <div class="d-flex justify-content-center align-items-center">
             <!-- <a href="#" target="_blank"><img width="60" height="60"
