--- a/2_paleoindio.html
+++ b/2_paleoindio.html
@@ -32,7 +32,7 @@
     <div class="card mb-3">
       <div class="row g-0">
         <div class="col-md-4">
-          <img src="asset/img/10_artefactoslíticos.jpg" class="img-fluid rounded-start" alt="...">
+          <img src="asset/img/2_VitrinaPaleoindio.jpg" class="img-fluid rounded-start" alt="...">
           <br>
           <h6 class="card-title">PALEOINDIO</h6>
           <div class="d-flex justify-content-center align-items-center">
