--- a/2_paleoindio.html
+++ b/2_paleoindio.html
@@ -54,11 +54,33 @@
             <p class="card-text">
               Poblamiento Americano<br>
 La era paleoindia de América del Sur hace referencia al primer poblamiento humano conocido de América. Se estableció hace unos 15 mil años antes del presente. Estuvo conformado por comunidades nómadas con vínculos culturales con Asia Oriental, Australasia, Melanesia y Polinesia. Esta población originaria usaba tecnologías líticas, el fuego controlado, explotaba la fauna marina y ocupaba refugios costeros.   
-                         </p>
+                        
             <iframe width="100%" height="auto" scrolling="no" frameborder="no" allow="autoplay"
               src="https://w.soundcloud.com/player/?url=https://soundcloud.com/valentinavillarroel/crustaceos-adheridos-a-rocas?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"></iframe>
-
-
+Herramientas Líticas
+El sitio paleo-arqueológico de Pilauco y Los Notros se encuentra en el límite
+norte de la ciudad de Osorno. Los sitios de Pilauco, junto con el sitio de
+Monte Verde II, ubicado alrededor de 100 km al sur, tienen la particularidad
+de presentar algunos de los registros culturales más antiguos del país y
+Sudamérica , entre 16400 a 12600 años antes del presente. En estos sitios, se
+han encontrado 140 piedras talladas y 7 piedras sin tallar con materiales de
+vidrio riolítico y dacitos que probablemente provienen del Complejo
+Volcánico Puyehue-Cordón Caulle. Este conjunto de artefactos líticos de
+tecnología unifacial de rápida confección y hechos a partir de materiales de
+origen local sugieren que eran destinadas para tareas simples de corta
+duración para después ser descartados en el lugar de trabajo. Esta
+característica hace difícil un diagnóstico de uso inequívoco, como evidencia
+inequívoca de la actividad humana. Esta tecnología está ausente en sitios
+más antiguos que los 12900 años antes del presente, en este contexto,
+Monte Verde II es uno de los pocos sitios con clara evidencia arqueológica
+debido a que los elementos encontrados no son solo líticos, sino que
+artefactos de madera, nudos hechos de junquillo, una selección de semillas
+y plantas medicinales hechas por humanos, así como también una
+arquitectura doméstica de carácter rudimentario. En el vídeo se puede
+apreciar a uno de los investigadores del sitio de Pilauco usando
+metodologías prácticas que entregan información sobre la fabricación de
+herramientas líticas.
+ </p>
           </div>
         </div>
       </div>
