--- a/2_paleoindio.html
+++ b/2_paleoindio.html
@@ -57,7 +57,7 @@ La era paleoindia de América del Sur hace referencia al primer poblamiento huma
                         
             <iframe width="100%" height="auto" scrolling="no" frameborder="no" allow="autoplay"
               src="https://w.soundcloud.com/player/?url=https://soundcloud.com/valentinavillarroel/crustaceos-adheridos-a-rocas?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"></iframe>
-Herramientas Líticas<br
+Herramientas Líticas<br>
 El sitio paleo-arqueológico de Pilauco y Los Notros se encuentra en el límite
 norte de la ciudad de Osorno. Los sitios de Pilauco, junto con el sitio de
 Monte Verde II, ubicado alrededor de 100 km al sur, tienen la particularidad
@@ -80,6 +80,20 @@ arquitectura doméstica de carácter rudimentario. En el vídeo se puede
 apreciar a uno de los investigadores del sitio de Pilauco usando
 metodologías prácticas que entregan información sobre la fabricación de
 herramientas líticas.
+
+              <iframe width="100%" height="auto" scrolling="no" frameborder="no" allow="autoplay"
+              src="https://w.soundcloud.com/player/?url=https://soundcloud.com/valentinavillarroel/crustaceos-adheridos-a-rocas?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"></iframe
+                      Herramientas Líticas y agricultura<br>
+
+ La tecnología lítica bifacial es propia de los habitantes paleoindios de las Américas. Esta incluía herramientas con ángulos y filos para cortar, asi como plomos para la pesca y pesos para medir.  De acuerdo a investigaciones, las rocas más utilizadas por los pueblos prehistóricos de Chile fueron el vidrio volcánico como la obsidiana, el cuarzo y sílice. Particularmente, en la subregión cultural de Arica, lugar al cual pertenecen la mayoría de los objetos aquí expuestos, con estas materias primas  se labraron líticos asociados a la caza y pesca marítima como puntas de proyectil usadas para flechas y arpones, pesas para redes o plomadas y anzuelos en piedra pizarra y hueso, entre otros, así como para el faenamiento de animales, como cuchillos y raspadores.  
+
+
+
+
+
+
+
+
  </p>
           </div>
         </div>
