--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
         <div class="col product-item" category="piso2">
           <div class="card shadow-sm">
-            <a href="1_VitrinaPleistoceno.html">
+            <a href="osorno_prehistorico.html">
               <img src="asset/img/1_VitrinaPleistoceno.jpg" class="card-img" alt="...">
             </a>
           </div>
