--- a/11_SalaCanoas.html
+++ b/11_SalaCanoas.html
@@ -37,7 +37,7 @@
             <h5 class="card-title">SALA DE LAS CANOAS</h5>
             <p class="card-text">
                <iframe width="100%" height="auto" scrolling="no" frameborder="no" allow="autoplay"
-              src="https://w.soundcloud.com/player/?url=https://soundcloud.com/orquestapandroginia/corsa-plus-2009?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"></iframe>
+              src="https://w.soundcloud.com/player/?url=https://soundcloud.com/audioguia-mhmo/tratados-de-paz-1793?si=5e7aa184d6d342debfd20b01c3372700&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"></iframe>
              </p>
             <!--
             <div class="d-flex justify-content-center align-items-center">
