--- a/12_wenteyao.html
+++ b/12_wenteyao.html
@@ -39,7 +39,7 @@
             <h5 class="card-title">Taitita Wenteyao y la Religiosidad mapuche</h5>
             <p class="card-text">
               <iframe width="50%" height="auto" scrolling="no" frameborder="no" allow="autoplay"
-      src="https://w.soundcloud.com/player/?url=https://soundcloud.com/barbaragonzalezbarrera/ventanas-al-aire?si=883007e740b94e0d905498af3ec47ab8&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"></iframe> -->
+      src="https://soundcloud.com/audioguia-mhmo/taitita-wenteyao?si=5e7aa184d6d342debfd20b01c3372700&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"></iframe> -->
                 </p>
             
             <div class="d-flex justify-content-center align-items-center">
