--- a/1_2_faunaPleistoceno.html
+++ b/1_2_faunaPleistoceno.html
@@ -55,7 +55,7 @@
               Fauna del Pleistoceno <br>
 En la comuna de Osorno se localizan alrededor de 7 sitios en donde se ha encontrado evidencia de megafauna extinta del Pleistoceno tardío: Pilauco, Los Notros, Mulpulmo, Fundo Lomas Blancas, Fundo Los Pinos y Nochaco, de los cuales solo Pilauco ha sido estudiado sistemáticamente.   Los restos fósiles encontrados corresponden a Xenarthra, mamíferos placentarios de origen americano como los osos hormigueros, armadillos y perezosos, a Hemiauchenia o paleo-llamas, a integrantes de la familia de los caballos  y de Gonfoterios o mastodontes del grupo de los proboscidios, orden al cual pertenecen los elefantes modernos. Junto con los restos de megafauna, en el sitio de Pilauco se han encontrado restos arqueológicos,  como artefactos líticos de tecnología unifacial.
                <iframe width="100%" height="auto" scrolling="no" frameborder="no" allow="autoplay"
-              src="https://w.soundcloud.com/player/?url=https://soundcloud.com/orquestapandroginia/corsa-plus-2009?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"></iframe>
+              src="https://soundcloud.com/audioguia-mhmo/faunadelpleistoceno?si=5e7aa184d6d342debfd20b01c3372700&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"></iframe>
 Fosilización<br>
 
 Fósiles son todos aquellos restos o rastros dejados por organismos que quedaron enterrados en los sedimentos, que datan de una edad superior a los 10000 años de antigüedad. Muchas veces estos no coinciden con su morfología original, sino que solo encontramos huellas o trozos de su actividad. Además , su forma original puede haber sido modificada por el proceso de fosilización.
