--- a/2_VitrinaHibridacion.html
+++ b/2_VitrinaHibridacion.html
@@ -44,7 +44,7 @@
 
             </p>
 
-            <audio controls="" src="https://stream.zeno.fm/es9h0crh74zuv" preload="auto"></audio>
+            <audio controls="" src="https://soundcloud.com/audioguia-mhmo/expresiones-de-la-interculturalidad?si=5e7aa184d6d342debfd20b01c3372700&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" preload="auto"></audio>
           </div>
         </div>
       </div>
