--- a/2_paleoindio.html
+++ b/2_paleoindio.html
@@ -56,7 +56,7 @@
 La era paleoindia de América del Sur hace referencia al primer poblamiento humano conocido de América. Se estableció hace unos 15 mil años antes del presente. Estuvo conformado por comunidades nómadas con vínculos culturales con Asia Oriental, Australasia, Melanesia y Polinesia. Esta población originaria usaba tecnologías líticas, el fuego controlado, explotaba la fauna marina y ocupaba refugios costeros.   
                         
             <iframe width="100%" height="auto" scrolling="no" frameborder="no" allow="autoplay"
-              src="https://w.soundcloud.com/player/?url=https://soundcloud.com/valentinavillarroel/crustaceos-adheridos-a-rocas?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"></iframe>
+              src="https://soundcloud.com/audioguia-mhmo/poblamiento-americano?si=5e7aa184d6d342debfd20b01c3372700&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"></iframe>
 Herramientas Líticas<br>
 El sitio paleo-arqueológico de Pilauco y Los Notros se encuentra en el límite
 norte de la ciudad de Osorno. Los sitios de Pilauco, junto con el sitio de
@@ -82,7 +82,7 @@ metodologías prácticas que entregan información sobre la fabricación de
 herramientas líticas.
 
               <iframe width="100%" height="auto" scrolling="no" frameborder="no" allow="autoplay"
-              src="https://w.soundcloud.com/player/?url=https://soundcloud.com/valentinavillarroel/crustaceos-adheridos-a-rocas?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"></iframe
+              src="https://soundcloud.com/audioguia-mhmo/herramientas-liticas?si=5e7aa184d6d342debfd20b01c3372700&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"></iframe
                       Herramientas Líticas y agricultura<br>
 
  La tecnología lítica bifacial es propia de los habitantes paleoindios de las Américas. Esta incluía herramientas con ángulos y filos para cortar, asi como plomos para la pesca y pesos para medir.  De acuerdo a investigaciones, las rocas más utilizadas por los pueblos prehistóricos de Chile fueron el vidrio volcánico como la obsidiana, el cuarzo y sílice. Particularmente, en la subregión cultural de Arica, lugar al cual pertenecen la mayoría de los objetos aquí expuestos, con estas materias primas  se labraron líticos asociados a la caza y pesca marítima como puntas de proyectil usadas para flechas y arpones, pesas para redes o plomadas y anzuelos en piedra pizarra y hueso, entre otros, así como para el faenamiento de animales, como cuchillos y raspadores.  
