--- a/3_CeramicaEtnografica.html
+++ b/3_CeramicaEtnografica.html
@@ -49,7 +49,7 @@
             <h5 class="card-title">CERÁMICA ETNOGRÁFICA</h5>
             <p class="card-text">
        
-            <iframe width="100%" height="auto" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https://soundcloud.com/endofobia/endofobia-mix-16082023?si=67ea6392e4414a6193ec26ef9cfbcd47&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"></iframe>
+            <iframe width="100%" height="auto" scrolling="no" frameborder="no" allow="autoplay" src="https://soundcloud.com/audioguia-mhmo/tringlo-colonial-etnografica?si=5e7aa184d6d342debfd20b01c3372700&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"></iframe>
             </p>
             
           </div>
