--- a/3_fosiles.html
+++ b/3_fosiles.html
@@ -42,7 +42,7 @@
             <p class="card-text">
               </p>
             <iframe width="100%" height="auto" scrolling="no" frameborder="no" allow="autoplay"
-              src="https://w.soundcloud.com/player/?url=https://soundcloud.com/user-714652709/klon-tran-port-disaster-jr-bajo?si=94cc06136ce3482a9cdd845bb276b04c&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"></iframe>
+              src="https://soundcloud.com/audioguia-mhmo/fosilizacion?si=5e7aa184d6d342debfd20b01c3372700&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"></iframe>
           </div>
 
         </div>
