--- a/5_VitrinaPiedras.html
+++ b/5_VitrinaPiedras.html
@@ -41,7 +41,7 @@
             <h5 class="card-title">VITRINA PIEDRAS</h5>
             <p class="card-text">
                <iframe width="100%" height="auto" scrolling="no" frameborder="no" allow="autoplay"
-              src="https://w.soundcloud.com/player/?url=https://soundcloud.com/orquestapandroginia/corsa-plus-2009?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"></iframe>
+              src="https://soundcloud.com/audioguia-mhmo/piedras-de-poder?si=5e7aa184d6d342debfd20b01c3372700&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"></iframe>
 
               </p>
 
