--- a/6_TextilesMapucheWiyiche.html
+++ b/6_TextilesMapucheWiyiche.html
@@ -44,7 +44,7 @@
              
             </p>
             <iframe width="100%" height="auto" scrolling="no" frameborder="no" allow="autoplay"
-              src="https://w.soundcloud.com/player/?url=https://soundcloud.com/kamila-govorcind/dj-set-kamila-govorcin-club-fauna-richie-hawtin?si=a460f78a7a0147dba7c0a2061de680c9&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"></iframe>
+              src="https://soundcloud.com/audioguia-mhmo/textiles-mapuche-huilliche?si=5e7aa184d6d342debfd20b01c3372700&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"></iframe>
 
           </div>
         </div>
