--- a/7_Joyeria.html
+++ b/7_Joyeria.html
@@ -47,7 +47,7 @@
 
             </p>
             <iframe width="100%" height="auto" scrolling="no" frameborder="no" allow="autoplay"
-              src="https://w.soundcloud.com/player/?url=https://soundcloud.com/mubemuv/mubesihiyth-en-retorno-de-saturno-4?si=1b7a441afbb94f889dae0e1593fbb9ec&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"></iframe>
+              src="https://soundcloud.com/audioguia-mhmo/plateria-mapuche?si=5e7aa184d6d342debfd20b01c3372700&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"></iframe>
 
           </div>
         </div>
