--- a/11_SalaCanoas.html
+++ b/11_SalaCanoas.html
@@ -36,8 +36,7 @@
           <div class="card-body">
             <h5 class="card-title">SALA DE LAS CANOAS</h5>
             <p class="card-text">
-               <iframe width="100%" height="auto" scrolling="no" frameborder="no" allow="autoplay"
-              src="https://w.soundcloud.com/player/?url=https://soundcloud.com/audioguia-mhmo/tratados-de-paz-1793?si=5e7aa184d6d342debfd20b01c3372700&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"></iframe>
+               <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1684197063&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/audioguia-mhmo" title="Museo Histórico Municipal de Osorno" target="_blank" style="color: #cccccc; text-decoration: none;">Museo Histórico Municipal de Osorno</a> · <a href="https://soundcloud.com/audioguia-mhmo/tratados-de-paz-1793" title="Tratados De Paz 1793" target="_blank" style="color: #cccccc; text-decoration: none;">Tratados De Paz 1793</a></div>
              </p>
             <!--
             <div class="d-flex justify-content-center align-items-center">
