--- a/2_VitrinaHibridacion.html
+++ b/2_VitrinaHibridacion.html
@@ -43,9 +43,7 @@
 
 
             </p>
-
-            <audio controls="" src="https://soundcloud.com/audioguia-mhmo/expresiones-de-la-interculturalidad?si=5e7aa184d6d342debfd20b01c3372700&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" preload="auto"></audio>
-          </div>
+<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1684195755&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/audioguia-mhmo" title="Museo Histórico Municipal de Osorno" target="_blank" style="color: #cccccc; text-decoration: none;">Museo Histórico Municipal de Osorno</a> · <a href="https://soundcloud.com/audioguia-mhmo/expresiones-de-la-interculturalidad" title="Expresiones De La Interculturalidad" target="_blank" style="color: #cccccc; text-decoration: none;">Expresiones De La Interculturalidad</a></div>          </div>
         </div>
       </div>
     </div>
