--- a/2_paleoindio.html
+++ b/2_paleoindio.html
@@ -55,8 +55,7 @@
               Poblamiento Americano<br>
 La era paleoindia de América del Sur hace referencia al primer poblamiento humano conocido de América. Se estableció hace unos 15 mil años antes del presente. Estuvo conformado por comunidades nómadas con vínculos culturales con Asia Oriental, Australasia, Melanesia y Polinesia. Esta población originaria usaba tecnologías líticas, el fuego controlado, explotaba la fauna marina y ocupaba refugios costeros.   
                         
-            <iframe width="100%" height="auto" scrolling="no" frameborder="no" allow="autoplay"
-              src="https://soundcloud.com/audioguia-mhmo/poblamiento-americano?si=5e7aa184d6d342debfd20b01c3372700&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"></iframe>
+<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1684194957&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/audioguia-mhmo" title="Museo Histórico Municipal de Osorno" target="_blank" style="color: #cccccc; text-decoration: none;">Museo Histórico Municipal de Osorno</a> · <a href="https://soundcloud.com/audioguia-mhmo/poblamiento-americano" title="Poblamiento Americano" target="_blank" style="color: #cccccc; text-decoration: none;">Poblamiento Americano</a></div>
 Herramientas Líticas<br>
 El sitio paleo-arqueológico de Pilauco y Los Notros se encuentra en el límite
 norte de la ciudad de Osorno. Los sitios de Pilauco, junto con el sitio de
@@ -80,10 +79,9 @@ arquitectura doméstica de carácter rudimentario. En el vídeo se puede
 apreciar a uno de los investigadores del sitio de Pilauco usando
 metodologías prácticas que entregan información sobre la fabricación de
 herramientas líticas.
-
-              <iframe width="100%" height="auto" scrolling="no" frameborder="no" allow="autoplay"
-              src="https://soundcloud.com/audioguia-mhmo/herramientas-liticas?si=5e7aa184d6d342debfd20b01c3372700&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"></iframe
-                      Herramientas Líticas y agricultura<br>
+<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1684194849&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/audioguia-mhmo" title="Museo Histórico Municipal de Osorno" target="_blank" style="color: #cccccc; text-decoration: none;">Museo Histórico Municipal de Osorno</a> · <a href="https://soundcloud.com/audioguia-mhmo/herramientas-liticas" title="Herramientas Liticas" target="_blank" style="color: #cccccc; text-decoration: none;">Herramientas Liticas</a></div>
+             
+              Herramientas Líticas y agricultura<br>
 
  La tecnología lítica bifacial es propia de los habitantes paleoindios de las Américas. Esta incluía herramientas con ángulos y filos para cortar, asi como plomos para la pesca y pesos para medir.  De acuerdo a investigaciones, las rocas más utilizadas por los pueblos prehistóricos de Chile fueron el vidrio volcánico como la obsidiana, el cuarzo y sílice. Particularmente, en la subregión cultural de Arica, lugar al cual pertenecen la mayoría de los objetos aquí expuestos, con estas materias primas  se labraron líticos asociados a la caza y pesca marítima como puntas de proyectil usadas para flechas y arpones, pesas para redes o plomadas y anzuelos en piedra pizarra y hueso, entre otros, así como para el faenamiento de animales, como cuchillos y raspadores.  
 
