--- a/5_VitrinaPiedras.html
+++ b/5_VitrinaPiedras.html
@@ -40,9 +40,7 @@
           <div class="card-body">
             <h5 class="card-title">VITRINA PIEDRAS</h5>
             <p class="card-text">
-               <iframe width="100%" height="auto" scrolling="no" frameborder="no" allow="autoplay"
-              src="https://soundcloud.com/audioguia-mhmo/piedras-de-poder?si=5e7aa184d6d342debfd20b01c3372700&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"></iframe>
-
+               <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1684195866&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/audioguia-mhmo" title="Museo Histórico Municipal de Osorno" target="_blank" style="color: #cccccc; text-decoration: none;">Museo Histórico Municipal de Osorno</a> · <a href="https://soundcloud.com/audioguia-mhmo/piedras-de-poder" title="Piedras De Poder" target="_blank" style="color: #cccccc; text-decoration: none;">Piedras De Poder</a></div>
               </p>
 
 
