--- a/osorno_prehistorico.html
+++ b/osorno_prehistorico.html
@@ -58,9 +58,7 @@ Los fósiles también evidencian las secuencias de  procesos biológicos y ambie
 Las huellas humanas junto con los artefactos líticos presentes en los sitios locales son la evidencia de aquellos habitantes tempranos que se integraron a las culturas precolombinas de América antes de la llegada Europea en el año 1492. A través del trabajo arqueológico se puede distinguir una continuidad tecnológica entre los habitantes tempranos y las culturas precolombinas, particularmente en el desarrollo de los artefactos líticos que junto con la alfarería revelan formas particulares de ver la vida y el mundo.
 
 
-               <iframe width="100%" height="auto" scrolling="no" frameborder="no" allow="autoplay"
-              src="https://w.soundcloud.com/player/?url=https://soundcloud.com/orquestapandroginia/corsa-plus-2009?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing"></iframe>
-
+               <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1684194519&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/audioguia-mhmo" title="Museo Histórico Municipal de Osorno" target="_blank" style="color: #cccccc; text-decoration: none;">Museo Histórico Municipal de Osorno</a> · <a href="https://soundcloud.com/audioguia-mhmo/osorno-prehistorico" title="Osorno Prehistorico" target="_blank" style="color: #cccccc; text-decoration: none;">Osorno Prehistorico</a></div>
               </p>
 
 
