9_mediadores_entre_mundos.html

--- a/9_mediadores_entre_mundos.html
+++ b/9_mediadores_entre_mundos.html
@@ -29,7 +29,6 @@
     <div class="card mb-3">
       <div class="row g-0">
         <div class="col-md-4">
-          <img src="asset/img/9_cedulatrutruka.jpg" class="img-fluid rounded-start" alt="...">
           <br>
           <div class="d-flex justify-content-center align-items-center">
             
@@ -37,7 +36,7 @@
         </div>
         <div class="col-md-8">
           <div class="card-body">
-            <h5 class="card-title">TRUTRUKA</h5>
+            <h5 class="card-title">Objetos Ceremoniales</h5>
             <p class="card-text">
              
             </p>
