--- a/9_mediadores_entre_mundos.html
+++ b/9_mediadores_entre_mundos.html
@@ -15,7 +15,7 @@
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="">Trutruka</h1>
+        <h1 class="">Objetos Ceremoniales</h1>
         <p>
           <a href="index.html" class="btn btn-secondary my-2">TODA LA AUDIOGUÍA</a>
       </div>
